# LearnOpenGL

./: .clang-format  CMakeLists.txt  CMakePresets.json  config.h.in
LearnOpenGL/: CMakeLists.txt  LearnOpenGL.cpp  camera.cpp  camera.h  config.h.in  fs.cpp  fs.h  fs_util.cpp  fs_util.h  main.cpp  model.cpp  model.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
shaders/: light.frag  object.frag  object.vert  screen.frag  screen.vert  shader.frag  shader.vert
